--- a/ajaxDemo/ajaxdemo/views/index.ejs
+++ b/ajaxDemo/ajaxdemo/views/index.ejs
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css' />
+    <link rel='stylesheet' href='css/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1 class="hh"><%= title %></h1>
     <p>Welcome to <%= title %></p>
-    <script src="/js/lib/jquery-1.8.3.js" charset="utf-8"></script>
-    <script src="/js/main.js" charset="utf-8"></script>
+    <script src="js/lib/jquery-1.8.3.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
