--- a/lib/animate.css
+++ b/lib/animate.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+test
 /*!
 Animate.css - http://daneden.me/animate
 Licensed under the MIT license - http://opensource.org/licenses/MIT
